answer
input.cpp: In function ‘bool get_coefficients(Equation*, Input_mode)’:
input.cpp:9:30: error: ‘enter_coefficients’ was not declared in this scope; did you mean ‘get_coefficients’?
    9 |         case KEYBOARD_INPUT: enter_coefficients(eq);
      |                              ^~~~~~~~~~~~~~~~~~
      |                              get_coefficients
input.cpp:11:38: error: ‘load_coefficients_from_file’ was not declared in this scope
   11 |         case INPUT_FROM_FILE: return load_coefficients_from_file(eq);
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
input.cpp: In function ‘Input_mode enter_input_mode()’:
input.cpp:28:55: error: ‘check_input_buffer’ was not declared in this scope
   28 |         if ('1' <= input_mode && input_mode <= '3' && check_input_buffer(stdin))
      |                                                       ^~~~~~~~~~~~~~~~~~
input.cpp:39:9: error: ‘clear_input_buffer’ was not declared in this scope
   39 |         clear_input_buffer();
      |         ^~~~~~~~~~~~~~~~~~
input.cpp: In function ‘void enter_coefficients(Equation*)’:
input.cpp:49:64: error: ‘check_input_buffer’ was not declared in this scope
   49 |         if (3 == scanf("%lf%lf%lf", &eq->a, &eq->b, &eq->c) && check_input_buffer(stdin))
      |                                                                ^~~~~~~~~~~~~~~~~~
input.cpp:54:9: error: ‘clear_input_buffer’ was not declared in this scope
   54 |         clear_input_buffer();
      |         ^~~~~~~~~~~~~~~~~~
input.cpp: In function ‘bool load_coefficients_from_file(Equation*)’:
input.cpp:65:5: error: ‘enter_answer’ was not declared in this scope
   65 |     enter_answer(file_name);
      |     ^~~~~~~~~~~~
input.cpp:68:9: error: ‘clear_screen’ was not declared in this scope
   68 |         clear_screen();
      |         ^~~~~~~~~~~~
input.cpp:83:12: error: ‘check_input_buffer’ was not declared in this scope
   83 |         && check_input_buffer(in)) {
      |            ^~~~~~~~~~~~~~~~~~
input.cpp:94:1: warning: control reaches end of non-void function [-Wreturn-type]
   94 | }
      | ^
output.cpp: In function ‘void print_into_file(Equation*)’:
output.cpp:11:5: error: ‘enter_answer’ was not declared in this scope
   11 |     enter_answer(file_name);
      |     ^~~~~~~~~~~~
output.cpp:14:9: error: ‘clear_screen’ was not declared in this scope
   14 |         clear_screen();
      |         ^~~~~~~~~~~~
output.cpp:27:14: error: ‘check_agreement’ was not declared in this scope
   27 |         if (!check_agreement()) {
      |              ^~~~~~~~~~~~~~~
output.cpp:45:5: error: ‘print_equation’ was not declared in this scope
   45 |     print_equation(eq, out);
      |     ^~~~~~~~~~~~~~
output.cpp: In function ‘void print_equation(Equation*, FILE*)’:
output.cpp:57:24: error: ‘print_no_roots’ was not declared in this scope
   57 |         case NO_ROOTS: print_no_roots(eq, out); break;
      |                        ^~~~~~~~~~~~~~
output.cpp:58:24: error: ‘print_one_root’ was not declared in this scope
   58 |         case ONE_ROOT: print_one_root(eq, out); break;
      |                        ^~~~~~~~~~~~~~
output.cpp:59:25: error: ‘print_two_roots’ was not declared in this scope
   59 |         case TWO_ROOTS: print_two_roots(eq, out); break;
      |                         ^~~~~~~~~~~~~~~
output.cpp:60:30: error: ‘print_infinite_roots’ was not declared in this scope
   60 |         case INFINITE_ROOTS: print_infinite_roots(out); break;
      |                              ^~~~~~~~~~~~~~~~~~~~
output.cpp: In function ‘void print_no_roots(Equation*, FILE*)’:
output.cpp:68:9: error: ‘is_zero’ was not declared in this scope
   68 |     if (is_zero(eq->a))
      |         ^~~~~~~
output.cpp: In function ‘void print_one_root(Equation*, FILE*)’:
output.cpp:78:9: error: ‘is_zero’ was not declared in this scope
   78 |     if (is_zero(eq->a))
      |         ^~~~~~~
utils.cpp: In function ‘bool is_zero(double)’:
utils.cpp:7:12: error: ‘fabs’ was not declared in this scope
    7 |     return fabs(number) <= EPS;
      |            ^~~~
utils.cpp:7:28: error: ‘EPS’ was not declared in this scope
    7 |     return fabs(number) <= EPS;
      |                            ^~~
utils.cpp: In function ‘void enter_answer(char*)’:
utils.cpp:13:19: error: ‘MAX_BUFFER_LEN’ was not declared in this scope
   13 |     fgets(answer, MAX_BUFFER_LEN, stdin);
      |                   ^~~~~~~~~~~~~~
utils.cpp:15:18: error: ‘strlen’ was not declared in this scope
   15 |     size_t len = strlen(answer);
      |                  ^~~~~~
utils.cpp:3:1: note: ‘strlen’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
    2 | #include <ctype.h>
  +++ |+#include <cstring>
    3 | 
utils.cpp:21:9: error: ‘clear_input_buffer’ was not declared in this scope
   21 |         clear_input_buffer();
      |         ^~~~~~~~~~~~~~~~~~
utils.cpp: In function ‘bool check_agreement()’:
utils.cpp:32:17: error: ‘MAX_BUFFER_LEN’ was not declared in this scope
   32 |     char answer[MAX_BUFFER_LEN] = {};
      |                 ^~~~~~~~~~~~~~
utils.cpp:34:18: error: ‘answer’ was not declared in this scope
   34 |     enter_answer(answer);
      |                  ^~~~~~
utils.cpp:40:18: error: ‘strcasecmp’ was not declared in this scope
   40 |         if (0 == strcasecmp(answer, agreements[index]))
      |                  ^~~~~~~~~~
utils.cpp: In function ‘void clear_screen()’:
utils.cpp:86:5: error: ‘system’ was not declared in this scope
   86 |     system("clear");
      |     ^~~~~~
solver.cpp: In function ‘void solve_equation(Equation*)’:
solver.cpp:8:9: error: ‘is_zero’ was not declared in this scope; did you mean ‘iszero’?
    8 |     if (is_zero(eq->a))
      |         ^~~~~~~
      |         iszero
solver.cpp:9:9: error: ‘solve_linear’ was not declared in this scope
    9 |         solve_linear(eq);
      |         ^~~~~~~~~~~~
solver.cpp:11:9: error: ‘solve_quadratic’ was not declared in this scope
   11 |         solve_quadratic(eq);
      |         ^~~~~~~~~~~~~~~
solver.cpp:13:5: error: ‘order_roots’ was not declared in this scope
   13 |     order_roots(eq);
      |     ^~~~~~~~~~~
solver.cpp:14:5: error: ‘normalize_zero’ was not declared in this scope
   14 |     normalize_zero(eq);
      |     ^~~~~~~~~~~~~~
solver.cpp: In function ‘void normalize_zero(Equation*)’:
solver.cpp:31:9: error: ‘is_zero’ was not declared in this scope; did you mean ‘iszero’?
   31 |     if (is_zero(eq->roots[0]))
      |         ^~~~~~~
      |         iszero
solver.cpp:34:9: error: ‘is_zero’ was not declared in this scope; did you mean ‘iszero’?
   34 |     if (is_zero(eq->roots[1]))
      |         ^~~~~~~
      |         iszero
solver.cpp: In function ‘void solve_linear(Equation*)’:
solver.cpp:41:9: error: ‘is_zero’ was not declared in this scope; did you mean ‘iszero’?
   41 |     if (is_zero(eq->b) && is_zero(eq->c))
      |         ^~~~~~~
      |         iszero
solver.cpp: In function ‘void solve_quadratic(Equation*)’:
solver.cpp:69:16: error: ‘is_zero’ was not declared in this scope; did you mean ‘iszero’?
   69 |     } else if (is_zero(discriminant)) {
      |                ^~~~~~~
      |                iszero
